<resources>
    <string name="app_name">Safe Keep</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="already_have_a_user">Already have a user?</string>
    <string name="Dont_have_a_user_yet">Dont have a user yet?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="phone">Phone</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="contact_list">Contact List</string>
    <string name="button">Button</string>
    <string name="debug_skip_to_main_screen">DEBUG - skip to main screen</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="date">הוספת דייט</string>
    <string name="settings">Settings</string>
    <string name="newEvent">צרי אירוע</string>
    <string name="add_as_keeper">הוסיפי כשומרת</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="calenderButton">Calender Button</string>
    <string name="Forward">Forward</string>
    <string name="Back">Back</string>
    <string name="title">הוסיפי כותרת</string>
    <string name="alerts">התראות</string>
    <string name="my_keepers_on_date">השומרים שלי בדייט הזה</string>
    <string name="keepers">השומרים שלי</string>
    <string name="temp">temp</string>
</resources>
