<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    android:orientation="vertical"
    tools:context=".TempActivity"
    android:id="@+id/TempActivity">

    <Button
        android:id="@+id/not"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:text="@string/button" />
    <Button
        android:id="@+id/contactListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_list" />
    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map" />
    <Button
        android:id="@+id/newEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent"/>
</LinearLayout>