<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/security"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"
        android:gravity="right"
        android:text="@string/forgot_your_password"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:textSize="22sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Dont_have_a_user_yet"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/click_to_register"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        android:textStyle="bold" />



</LinearLayout>