<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="previousMonthAction"
            android:text="@string/Back"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="May 2024"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="nextMonthAction"
            android:text="@string/Forward"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SUN"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="MON"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TUE"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="WED"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="THU"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FRI"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAT"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="144dp" />



    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="310dp" />

    <Button
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="הוספת דייט חדש!"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="310dp" />

    <Button
        android:id="@+id/TempActivity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/temp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="310dp" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</LinearLayout>
